tree-sitter-openspec-spec/test/corpus/delta_sections.txt
================
ADDED delta section
================

## ADDED Requirements

### Requirement: test

The system SHALL work.

---

(document
  (delta_section
    (delta_header)
    (requirement
      (requirement_name)
      (requirement_body
        (word)
        (word)
        (keyword)
        (word)))))

================
Spec without delta sections
================

### Requirement: no-delta

The system MUST work.

---

(document
  (requirement
    (requirement_name)
    (requirement_body
      (word)
      (word)
      (keyword)
      (word))))

================
Title with delta section
================

# Test Spec

## ADDED Requirements

### Requirement: test

Works.

---

(document
  (title)
  (delta_section
    (delta_header)
    (requirement
      (requirement_name)
      (requirement_body
        (word)))))
