tree-sitter-openspec-spec/test/corpus/scenarios.txt
================
Bare keyword format
================

### Requirement: test

The system SHALL work.

#### Scenario: basic
WHEN started
THEN it works

---

(document
  (requirement
    (requirement_name)
    (requirement_body
      (word)
      (word)
      (keyword)
      (word))
    (scenario
      (scenario_name)
      (condition
        (condition_keyword))
      (assertion
        (assertion_keyword)))))

================
Bold keyword format
================

### Requirement: test

The system SHALL work.

#### Scenario: basic
- **WHEN** the user clicks
- **THEN** the system responds
- **AND** logs the event

---

(document
  (requirement
    (requirement_name)
    (requirement_body
      (word)
      (word)
      (keyword)
      (word))
    (scenario
      (scenario_name)
      (condition
        (condition_keyword))
      (assertion
        (assertion_keyword))
      (continuation
        (continuation_keyword)))))

================
Multiple scenarios
================

### Requirement: test

The system SHALL work.

#### Scenario: first
WHEN started
THEN it works

#### Scenario: second
WHEN stopped
THEN it halts

---

(document
  (requirement
    (requirement_name)
    (requirement_body
      (word)
      (word)
      (keyword)
      (word))
    (scenario
      (scenario_name)
      (condition
        (condition_keyword))
      (assertion
        (assertion_keyword)))
    (scenario
      (scenario_name)
      (condition
        (condition_keyword))
      (assertion
        (assertion_keyword)))))
